--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "jogo-do-olho-server",
-  "version": "1.0.0",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "socket.io": "^4.8.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3",
-    "uuid": "^11.0.3"
-  }
+	"name": "jogo-do-olho-server",
+	"version": "1.0.0",
+	"main": "src/server.js",
+	"scripts": {
+		"start": "yarn build && node dist/bundle.js",
+		"dev": "nodemon",
+		"build": "webpack --mode production"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@types/express": "^5.0.0",
+		"@types/node": "^22.8.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"socket.io": "^4.8.1",
+		"uuid": "^11.0.3"
+	},
+	"devDependencies": {
+		"browserify-zlib": "^0.2.0",
+		"nodemon": "^3.1.9",
+		"path-browserify": "^1.0.1",
+		"stream-browserify": "^3.0.0",
+		"ts-loader": "^9.5.2",
+		"typescript": "^5.8.2",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1",
+		"webpack-dev-server": "^5.2.0",
+		"webpack-node-externals": "^3.0.0"
+	}
 }
